Remove link clicks in print preview

Bug: 699000
Change-Id: I7bce7da8c612fe5c98255d6eb0e69f4d42132e55